@@ -6,6 +6,7 @@
   (bug 4429).
 - Make splash engines store their settings in Xfconf.
 - Handle the ProcessID SM property properly.
+- Add a session editor to the settings dialog.
 
 
 4.5.91
